MDEV-25891 Computed default for INVISIBLE column is ignored in INSERT

There are two fill_record() functions (8343 and 8618). First one is
used when there are some explicit values, the second one is used for
all implicit values. First one does update_default_fields(), the
second one did not. Added update_default_fields() call to the implicit
version of fill_record().