sql/sql_base.cc
@@ -8677,8 +8677,11 @@ fill_record(THD *thd, TABLE *table, Field **ptr, List<Item> &values,
         goto err;
     field->set_has_explicit_value();
   }
-  /* Update virtual fields */
   thd->abort_on_warning= FALSE;
+  if (table->default_field &&
+      table->update_default_fields(ignore_errors))
+    goto err;
+  /* Update virtual fields */
   if (table->vfield &&
       table->update_virtual_fields(table->file, VCOL_UPDATE_FOR_WRITE))
     goto err;
